--- a/index.html
+++ b/index.html
@@ -266,28 +266,28 @@
             <div class="media-grid" data-aos="fade-up" data-aos-delay="100">
                 <div class="media-card" data-aos="flip-left" data-aos-delay="100">
                     <div class="media-logo">
-                        <img src="assets/btv-logo.png" alt="BTV Logo" class="lazy-load">
+                        <img src="assets/BTV-logo.png" alt="BTV Logo" class="lazy-load">
                     </div>
                     <h3>BTV</h3>
                     <p>Featured artist on Bangladesh Television's "Classical Heritage"</p>
                 </div>
                 <div class="media-card" data-aos="flip-left" data-aos-delay="200">
                     <div class="media-logo">
-                        <img src="assets/mytv-logo.png" alt="MYTV Logo" class="lazy-load">
+                        <img src="assets/MYTV-logo.png" alt="MYTV Logo" class="lazy-load">
                     </div>
                     <h3>MYTV</h3>
                     <p>Guest performer on "Rising Talents" showcase</p>
                 </div>
                 <div class="media-card" data-aos="flip-left" data-aos-delay="300">
                     <div class="media-logo">
-                        <img src="assets/nexus-logo.png" alt="Nexus TV Logo" class="lazy-load">
+                        <img src="assets/NEXUS-logo.png" alt="Nexus TV Logo" class="lazy-load">
                     </div>
                     <h3>Nexus TV</h3>
                     <p>Special interview and live performance</p>
                 </div>
                 <div class="media-card" data-aos="flip-left" data-aos-delay="400">
                     <div class="media-logo">
-                        <img src="assets/ctv-logo.png" alt="CTV Logo" class="lazy-load">
+                        <img src="assets/CTV-logo.png" alt="CTV Logo" class="lazy-load">
                     </div>
                     <h3>CTV</h3>
                     <p>Featured in documentary on young musical talents</p>
