--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>Also known as Abul Kasem</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Contact</a>
-                    <a href="#achievements" class="btn btn-secondary">Listen Now</a>
+                    <a href="#achievements" class="btn btn-secondary">My Achievements</a>
                 </div>
             </div>
         </div>
