--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="about-content" data-aos="fade-up" data-aos-delay="100">
                 <div class="about-image">
                     <div class="image-frame">
-                        <img src="assets/ak.jpg" alt="AK Ashikur Rahman playing sarod" class="lazy-load">
+                        <img src="assets/personal/CDR00398.jpg" alt="AK Ashikur Rahman playing sarod" class="lazy-load">
                     </div>
                 </div>
                 <div class="about-text">
@@ -125,6 +125,14 @@
                     </blockquote>
                 </div>
                 <div class="education-timeline">
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="50">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <h3>Published my First Book "Natokiyo Groton" (Dramatic Events)</h3>
+                            <p class="institution"><a href="https://www.rokomari.com/book/463084/natokio-ghotona#description" target="_blank">View on Rokomari</a></p>
+                            <p class="years">2025</p>
+                        </div>
+                    </div>
                     <div class="timeline-item" data-aos="fade-right" data-aos-delay="100">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
@@ -155,6 +163,71 @@
                             <h3>National Children Award</h3>
                             <p class="institution">Winner for Outstanding Sarod Performance</p>
                             <p class="years">2014</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Photo Album Section - Masonry Grid Layout -->
+    <section id="photo-album" class="photo-album-section section">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Photo Album</h2>
+            <div class="masonry-gallery" data-aos="fade-up" data-aos-delay="100">
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/CDR00327.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">New Moment</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/CDR00351.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">Moment 1</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/CDR00368.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">Moment 2</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/CDR00451.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">Moment 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/CDR00484.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">Moment 4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/CDR00492.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">Moment 5</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masonry-item">
+                    <div class="masonry-content">
+                        <img src="assets/personal/ak.jpg" alt="AK Ashikur Rahman" class="lazy-load">
+                        <div class="masonry-overlay">
+                            <div class="masonry-caption">Moment 6</div>
                         </div>
                     </div>
                 </div>
